architecture/kubernetes/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: interview-app
  labels:
    name: interview-app
