architecture/kubernetes/04-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: interview-app
  labels:
    app: backend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1         
      maxUnavailable: 0  
  
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: "539562401403.dkr.ecr.us-east-1.amazonaws.com/interview-backend:latest"
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8000
          protocol: TCP
        volumeMounts:
        - name: static
          mountPath: /usr/src/app/staticfiles
        - name: media
          mountPath: /usr/src/app/media
      
      volumes:
      - name: static
        emptyDir: {}
      - name: media
        emptyDir: {}
      
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
